Bug 1611407 [Linux/X11] Don't try to get text clipboard data of binary MIME types, r=jhorak

X11 tries to convert any binary clipboard data to text if text MIME type is missing in clipboard.
This leads to various errors, wrong conversions and timeouts.
So get clipboard content first and if there are only binary MIME types in clipboard advertise only these types.

Differential Revision: https://phabricator.services.mozilla.com/D123687